Fixed UI issues and sections

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <a href="signup.html" class="btn-get-started scrollto" target="_">Sign Up</a>
           </div>
         </div>
-        <div class="col-md-6 intro-img order-md-last order-first wow bounceInUp">
-          <img src="img/Terminal1GImp.png" alt style="box-shadow: 5px 6px 4px 0 #44dc35;" class="img-fluid">
+        <div class="col-md-6 intro-img order-md-last order-first wow bounceInUp" style="text-align: center; visibility: visible; animation-name: bounceInUp;">
+          <img src="img/Terminal1GImp.png" alt="" style="box-shadow: 5px 6px 4px 0 #44dc35;" class="img-fluid">
         </div>
       </div>
     </div>
@@ -266,10 +266,7 @@
     <section id="why-us" class="wow fadeIn">
       <div class="container-fluid" id="aboutp">
 
-        <header class="section-header">
-          <h3>What do we offer?</h3>
-          <p style="font-size:20px;">ProtoHacks is a <strong>24 Hour</strong> hackathon providing <strong>amazing Prizes, Food, and more.</strong> ProtoHacks offers <strong>several workshops</strong> aiming to teach participants critical skills and concepts. That's not all, ProtoHacks provides <strong>advising and mentorship</strong> to teams during their worktimes and finally, ProtoHacks wraps up with <strong>professional judging and an award ceremony.</strong></h1>
-        </header>
+        
 
         <div class="row">
 
@@ -279,12 +276,14 @@
 
           <div class="col-lg-6">
             <div class="why-us-content">
-              <div class="why-us-img"><img src="img/MacroPCBdense.jpg" class="img-fluid" alt=""></div> <!-- schedule -->
-              <!--<div class="features wow bounceInUp clearfix">
+              <header class="section-header">
+                <h3>What do we offer?</h3>
+              </header>
+              <div class="features wow clearfix">
                 <i class="fa fa-diamond" style="color: #f058dc;"></i>
-                <h4>Corporis dolorem</h4>
-                <p>Commodi quia voluptatum. Est cupiditate voluptas quaerat officiis ex alias dignissimos et ipsum. Soluta at enim modi ut incidunt dolor et.</p>
-              </div>-->
+                <h4>A new Hackathon experience</h4>
+                <p style="font-size:20px;">ProtoHacks is a <strong>24 Hour</strong> hackathon providing <strong>amazing Prizes, Food, and more.</strong> ProtoHacks offers <strong>several workshops</strong> aiming to teach participants critical skills and concepts. That's not all, ProtoHacks provides <strong>advising and mentorship</strong> to teams during their worktimes and finally, ProtoHacks wraps up with <strong>professional judging and an award ceremony.</strong></h1>
+              </div>
 
               <!--<div class="features wow bounceInUp clearfix">
                 <i class="fa fa-object-group" style="color: #ffb774;"></i>
