--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li><a href="signup.html" target="_">Sign Up</a></li>
-          <li><a href="#services">About</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#clients">Sponsors</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#faq">FAQ</a></li>
