--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <a href="signup.html" class="btn-get-started scrollto" target="_">Sign Up</a>
           </div>
         </div>
-        <div class="col-md-6 intro-img order-md-last order-first wow bounceInUp">
-          <img src="img/Terminal1GImp.png" alt style="box-shadow: 5px 6px 4px 0 #44dc35;" class="img-fluid">
+        <div class="col-md-6 intro-img order-md-last order-first wow bounceInUp" style="text-align: center; visibility: visible; animation-name: bounceInUp;">
+          <img src="img/Terminal1GImp.png" alt="" style="box-shadow: 5px 6px 4px 0 #44dc35;" class="img-fluid">
         </div>
       </div>
     </div>
